feat: Agregar nuevas funcionalidades para la gestión de oficinas, equipos y usuarios, incluyendo asignación de empleados y equipos
